# splitpay

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
contract/src/: lib.rs
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CreateSplit.css  CreateSplit.jsx  ViewSplit.css  ViewSplit.jsx  WalletConnect.css  WalletConnect.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.css  Dashboard.jsx  Landing.css  Landing.jsx  WalletConnectionPage.css  WalletConnectionPage.jsx
