[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
soroban-sdk = { version = "22.0.0", default-features = false }
stellar-rpc-client = "22.0.0"
stellar-xdr = { version = "22.0.0", features = ["curr", "std", "serde"] }
base64 = "0.22"
stellar-strkey = "0.0.11"
